--- a/apps/app_web/.gitignore
+++ b/apps/app_web/.gitignore
@@ -14,3 +14,7 @@ erl_crash.dump
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+
+/priv/static/css/styles.css
+/priv/static/js/bundle.js
+
